# AegisMind

./: .env.example  .gitignore  ANIMATED_BACKGROUND_ADDED.md  CMakeLists.txt  COMPLETE_SETUP_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FONT_CHANGE_TO_PLUS_JAKARTA_SANS.md  GITHUB_AUTHENTICATION.md  GITHUB_SETUP.md  HOME_PAGE_ADDED.md  INTERACTIVE_DASHBOARD_COMPLETE.md  INTERACTIVE_EVENTS_GUIDE.md  LICENSE  POST_INSTALL_STEPS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.bat  QUICKSTART.md  README.md  READY_FOR_GITHUB.md  REBUILD_SIMPLE.md  REBUILD_WITH_EVENTS.md  SECURITY.md  SECURITY_CHANGES_SUMMARY.md  SETUP_WINDOWS.md  START_HERE.md  complete-setup-automated.ps1  configure-and-build.bat  docker-compose.yml  download-vs-buildtools.ps1  install-prereqs-simple.ps1  install-prerequisites.ps1  quick-rebuild.bat  rebuild-now.bat  rebuild.ps1  setup.ps1  vcpkg.json
cmake/: .gitkeep
config/: app.yaml.example
scripts/: build.bat  build.sh  seed_demo_data.cpp  setup-mongodb.sh  start-mongodb-windows.bat
src/: main.cpp  main.cpp.backup
src/api/: rest_server.cpp  rest_server.hpp  websocket_server.cpp  websocket_server.hpp
src/audit/: auditor.cpp  auditor.hpp
src/core/: correlation.cpp  correlation.hpp  event_normalizer.cpp  event_normalizer.hpp  ids.cpp  ids.hpp  incident_clusterer.cpp  incident_clusterer.hpp
src/ingest/: file_ingestor.cpp  file_ingestor.hpp  http_ingestor.cpp  http_ingestor.hpp
src/metrics/: metrics.cpp  metrics.hpp
src/storage/: change_stream.cpp  change_stream.hpp  mongo.cpp  mongo.hpp  schemas.hpp
tests/: test_clusterer.cpp  test_ids.cpp  test_normalizer.cpp
ui/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_WITH_CONTROLS.md  UPDATED_FOR_BACKEND.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts  vitest.config.ts
ui/src/: app.css  main.tsx  types.ts
ui/src/components/: Donut.tsx  Drawer.tsx  ErrorBanner.tsx  EventDetailsModal.tsx  Filters.tsx  Header.tsx  IncidentDetailsModal.tsx  KpiCard.tsx  PiePanel.tsx  ProgressBar.tsx  Skeleton.tsx  SystemControls.tsx  Threads.tsx  TimePicker.tsx  Timeseries.tsx  TotalDevices.tsx  WorldMap.tsx
ui/src/lib/: api.ts  colors.ts  format.ts  perf.ts  ws.ts
ui/src/mocks/: data.ts  server.ts
ui/static/: index.html
(+12 files in other folders)
